# mkpandocs

./: .gitattributes  .gitignore  .jshintignore  CONTRIBUTING.md  FUNDING.yml  LICENSE  README.md  context7.json  hatch_build.py  mkpandocs.yml  properdocs.yml  pyproject.toml  setup.py
.github/workflows/: autofix.yml  ci.yml  deploy-docs.yml  deploy-release.yml  docs.yml
docs/: CNAME  getting-started.md  hooks.py  index.md
docs/about/: release-notes.md
docs/dev-guide/: README.md  api.md  architecture.md  plugins.md  themes.md  translations.md
docs/img/: plugin-events.py
docs/user-guide/: README.md  choosing-your-theme.md  cli.md  configuration.md  customizing-your-theme.md  deploying-your-docs.md  deploying.md  example-filters.md  installation.md  json-filters.md  localizing-your-theme.md  writing-your-docs.md
filters/: add_target_blank.py  link_class.lua
mkdocs/: exceptions.py  plugins.py
mkdocs/commands/: build.py
mkdocs/config/: base.py  defaults.py
mkdocs/contrib/search/: __init__.py
mkdocs/structure/: __init__.py
mkdocs/tests/: cli_tests.py  integration.py
mkdocs/tests/config/: config_options_tests.py  config_tests.py
mkdocs/tests/integration/: projects.yaml
mkdocs/tests/integration/complicated_config/: mkdocs.yml
mkdocs/tests/integration/minimal/docs/: testing.md
mkdocs/tests/integration/unicode/docs/: Übersicht.md
mkdocs/tests/structure/: file_tests.py  nav_tests.py  toc_tests.py
mkdocs/tests/utils/: templates_tests.py
mkdocs/themes/mkdocs/: messages.pot  search-modal.html
mkdocs/themes/mkdocs/locales/de/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/fa/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/fr/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/it/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/ja/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/pt_BR/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/ru/LC_MESSAGES/: messages.po
mkdocs/themes/mkdocs/locales/uk/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/: footer.html
mkdocs/themes/readthedocs/locales/es/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/fr/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/tr/LC_MESSAGES/: messages.po
mkdocs/themes/readthedocs/locales/uk/LC_MESSAGES/: messages.po
mkdocs/utils/: yaml.py
properdocs/: __init__.py  __main__.py  localization.py  plugins.py  replacement_warning.py  theme.py
properdocs/commands/: build.py  get_deps.py  gh_deploy.py  install_deps.py  new.py  serve.py
properdocs/config/: __init__.py  base.py  config_options.py  defaults.py
properdocs/contrib/search/: __init__.py  search_index.py
properdocs/livereload/: __init__.py
properdocs/structure/: __init__.py  files.py  nav.py  pages.py
properdocs/tests/: __init__.py  base.py  build_tests.py  cli_tests.py  get_deps_tests.py  gh_deploy_tests.py  integration.py  livereload_tests.py  localization_tests.py  new_tests.py  plugin_tests.py  search_tests.py  theme_tests.py
properdocs/tests/config/: base_tests.py  config_options_legacy_tests.py  config_options_tests.py  config_tests.py
properdocs/tests/integration/: projects.yaml
properdocs/tests/integration/complicated_config/documentation/: index.md
properdocs/tests/integration/minimal/docs/: testing.md
properdocs/tests/integration/subpages/docs/: metadata.md
properdocs/tests/integration/unicode/docs/: Übersicht.md  ♪.md
properdocs/tests/structure/: file_tests.py  nav_tests.py  page_tests.py  toc_tests.py
properdocs/tests/utils/: babel_stub_tests.py  utils_tests.py
properdocs/themes/mkdocs/: base.html  keyboard-modal.html  main.html
properdocs/themes/mkdocs/locales/es/LC_MESSAGES/: messages.po
properdocs/themes/mkdocs/locales/id/LC_MESSAGES/: messages.po
properdocs/themes/mkdocs/locales/nb/LC_MESSAGES/: messages.po
properdocs/themes/mkdocs/locales/nl/LC_MESSAGES/: messages.po
properdocs/themes/mkdocs/locales/nn/LC_MESSAGES/: messages.po
properdocs/themes/mkdocs/locales/pl/LC_MESSAGES/: messages.po
properdocs/themes/mkdocs/locales/tr/LC_MESSAGES/: messages.po
properdocs/themes/mkdocs/locales/zh_CN/LC_MESSAGES/: messages.po
properdocs/themes/mkdocs/locales/zh_TW/LC_MESSAGES/: messages.po
properdocs/themes/readthedocs/: base.html  messages.pot  search.html
properdocs/themes/readthedocs/css/: theme_extra.css
properdocs/themes/readthedocs/locales/de/LC_MESSAGES/: messages.po
properdocs/themes/readthedocs/locales/fa/LC_MESSAGES/: messages.po
properdocs/themes/readthedocs/locales/id/LC_MESSAGES/: messages.po
properdocs/themes/readthedocs/locales/it/LC_MESSAGES/: messages.po
properdocs/themes/readthedocs/locales/ja/LC_MESSAGES/: messages.po
properdocs/themes/readthedocs/locales/nl/LC_MESSAGES/: messages.po
properdocs/themes/readthedocs/locales/pl/LC_MESSAGES/: messages.po
properdocs/themes/readthedocs/locales/pt_BR/LC_MESSAGES/: messages.po
properdocs/themes/readthedocs/locales/ru/LC_MESSAGES/: messages.po
properdocs/themes/readthedocs/locales/zh_CN/LC_MESSAGES/: messages.po
properdocs/themes/readthedocs/locales/zh_TW/LC_MESSAGES/: messages.po
properdocs/utils/: __init__.py  cache.py  meta.py  rendering.py  templates.py  yaml.py
requirements/: requirements-docs.txt  requirements-style.txt
