[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "properdocs"
description = "Project documentation with Markdown."
readme = "README.md"
license = "BSD-2-Clause"
authors = [
    {name = "Tom Christie", email = "tom@tomchristie.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    # Begin Python versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    # End Python versions
    "Topic :: Documentation",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "click >=7.0",
    "Jinja2 >=2.11.1",
    "markupsafe >=2.0.1",
    "Markdown >=3.3.6",
    "PyYAML >=5.1",
    "watchdog >=2.0",
    "ghp-import >=1.0",
    "pyyaml_env_tag >=0.1",
    "importlib-metadata >=4.4; python_version < '3.10'",
    "packaging >=20.5",
    "pathspec >=0.11.1",
    "platformdirs >=2.2.0",
    "colorama >=0.4; platform_system == 'Windows'",
]
[project.optional-dependencies]
i18n = [
    "babel >=2.9.0",
]

[project.urls]
Documentation = "https://properdocs.org/"
Source = "https://github.com/properdocs/properdocs"
Issues = "https://github.com/properdocs/properdocs/issues"
History = "https://github.com/properdocs/properdocs/releases"

[project.scripts]
properdocs = "properdocs.__main__:cli"

[project.entry-points."properdocs.plugins"]
search = "properdocs.contrib.search:SearchPlugin"

[tool.hatch.version]
path = "properdocs/__init__.py"

[tool.hatch.build]
artifacts = ["/properdocs/**/*.mo"]
[tool.hatch.build.targets.sdist]
include = ["/properdocs"]
[tool.hatch.build.targets.wheel]
exclude = ["/properdocs/tests"]

[tool.hatch.env]
requires = [
    "hatch-properdocs",
    "hatch-pip-compile >=1.7.0",
]

[tool.hatch.envs.default.scripts]
all = [
    "hatch run style:fix",
    "hatch run types:check",
    "hatch run test:test",
    "hatch run lint:check",
    "hatch run +type=default integration:test",
]

[tool.hatch.envs.test]
features = ["i18n"]
extra-dependencies = [
    "properdocs-theme-mkdocs @ {root:uri}/packages/properdocs-theme-mkdocs",
    "properdocs-theme-readthedocs @ {root:uri}/packages/properdocs-theme-readthedocs",
    "coverage",
]
[tool.hatch.envs.test.scripts]
test = 'python -m unittest discover -s properdocs -p "*tests.py"'
_coverage = [
    'coverage run --source=properdocs --omit "properdocs/tests/*" -m unittest discover -s properdocs -p "*tests.py"',
    "coverage xml",
    "coverage report --show-missing"
]
with-coverage = "test"
[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]
[tool.hatch.envs.test.overrides]
matrix.type.scripts = [
    { key = "with-coverage", value = "_coverage", if = ["default"] },
]

[tool.hatch.env.collectors.properdocs.integration]
path = "properdocs.yml"
[tool.hatch.envs.integration]
detached = false
template = "test"
[tool.hatch.envs.integration.scripts]
test = "python -m properdocs.tests.integration"
[[tool.hatch.envs.integration.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]
type = ["default", "no-babel"]
[tool.hatch.envs.integration.overrides]
matrix.type.features = [
    { value = "i18n", if = ["default"] },
]

[tool.hatch.envs.types]
dependencies = [
    "mypy",
    "babel",
    "types-Markdown",
    "types-pytz",
    "types-PyYAML",
    "types-setuptools",
    "typing-extensions",
]
[tool.hatch.envs.types.scripts]
check = "mypy {args} properdocs"

[tool.hatch.envs.style]
type = "pip-compile"
detached = true
dependencies = [
    "ruff",
]
[tool.hatch.envs.style.scripts]
check = "ruff check properdocs {args}"
format = "ruff format -q properdocs"
fix = [
    "check --fix --unsafe-fixes",
    "format",
]
[tool.hatch.envs.lint]
detached = true
dependencies = [
    "codespell==2.2.6",
]
[tool.hatch.envs.lint.scripts]
spelling = 'codespell properdocs docs *.* -S LC_MESSAGES -S "*.min.js" -S "lunr*.js" -S fontawesome-webfont.svg -S tinyseg.js -S "*.map"'
markdown = "npm exec --yes -- markdownlint-cli README.md CONTRIBUTING.md packages/README.md docs/ --ignore docs/CNAME"
js = "npm exec --yes -- jshint properdocs/"
check = ["markdown", "js", "spelling"]

[tool.hatch.env.collectors.properdocs.docs]
path = "properdocs.yml"
[tool.hatch.envs.docs]
type = "pip-compile"
detached = false

[tool.ruff]
line-length = 100
[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
preview = true
select = [
    "F", "E", "W", "I", "UP", "YTT", "ASYNC", "C4", "DTZ", "T10", "FA", "ISC", "PIE", "T20", "RSE",
    "N803", "N804", "N805", "N806", "N807", "N815", "N999",
    "S201", "S202", "S303", "S304", "S305", "S306", "S602", "S604", "S605", "S612",
    "B002", "B003", "B004", "B005", "B008", "B009", "B010", "B011", "B012", "B013", "B014", "B015", "B016", "B017", "B018", "B019", "B020", "B021", "B022", "B023", "B025", "B026", "B029", "B030", "B031", "B032", "B033", "B034", "B035", "B039", "B909",
    "COM818",
    "D200", "D201", "D202", "D204", "D207", "D208", "D209", "D210", "D211", "D213", "D214", "D300", "D301", "D400", "D402", "D403", "D405", "D412", "D414", "D415", "D416", "D417", "D419",
    "LOG001", "LOG007", "LOG009", "LOG015",
    "G001", "G002", "G010", "G101", "G201", "G202",
    "PYI001", "PYI002", "PYI003", "PYI004", "PYI005", "PYI006", "PYI007", "PYI008", "PYI009", "PYI010", "PYI011", "PYI012", "PYI013", "PYI014", "PYI015", "PYI016", "PYI017", "PYI018", "PYI020", "PYI021", "PYI024", "PYI025", "PYI026", "PYI029", "PYI030", "PYI032", "PYI033", "PYI035", "PYI036", "PYI041", "PYI042", "PYI043", "PYI044", "PYI045", "PYI046", "PYI047", "PYI048", "PYI049", "PYI050", "PYI051", "PYI052", "PYI053", "PYI054", "PYI055", "PYI056", "PYI057", "PYI058", "PYI061", "PYI062", "PYI063", "PYI064", "PYI066",
    "Q004",
    "SIM101", "SIM103", "SIM107", "SIM109", "SIM113", "SIM118", "SIM201", "SIM202", "SIM208", "SIM210", "SIM211", "SIM212", "SIM220", "SIM221", "SIM222", "SIM223", "SIM300", "SIM401", "SIM905", "SIM910", "SIM911",
    "TC001", "TC002", "TC003", "TC004", "TC005", "TC006", "TC007", "TC008", "TC010",
    "PTH201",
    "TD004", "TD005", "TD006", "TD007",
    "PGH004", "PGH005",
    "PLC0105", "PLC0131", "PLC0132", "PLC0205", "PLC0208", "PLC0414", "PLC2401", "PLC2403", "PLC2701", "PLC2801", "PLC3002",
    "PLR0124", "PLR0133", "PLR0202", "PLR0203", "PLR0206", "PLR0402", "PLR1716", "PLR1722", "PLR1733", "PLR1736", "PLR2044",
    "TRY201", "TRY203", "TRY401",
    "FLY002",
    "PERF101", "PERF102", "PERF402", "PERF403",
    "FURB105", "FURB110", "FURB116", "FURB129", "FURB131", "FURB132", "FURB136", "FURB142", "FURB145", "FURB148", "FURB154", "FURB156", "FURB157", "FURB161", "FURB163", "FURB164", "FURB166", "FURB168", "FURB169", "FURB171", "FURB177", "FURB181", "FURB188", "FURB192",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF006", "RUF007", "RUF008", "RUF009", "RUF010", "RUF013", "RUF016", "RUF017", "RUF018", "RUF019", "RUF020", "RUF021", "RUF023", "RUF024", "RUF026", "RUF028", "RUF029", "RUF030", "RUF031", "RUF032", "RUF033", "RUF034", "RUF036", "RUF037", "RUF038", "RUF039", "RUF040", "RUF041", "RUF046", "RUF047", "RUF048", "RUF049", "RUF051", "RUF055", "RUF056", "RUF057", "RUF058", "RUF100", "RUF101", "RUF200",
]
ignore = ["E501", "E731", "UP038", "UP045", "UP007", "F841"]
[tool.ruff.lint.per-file-ignores]
"properdocs/tests/**" = ["PLC2701", "PLR6301"]
[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true
[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "collections.abc"]

[tool.mypy]
warn_unreachable = true
allow_redefinition = true
