[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkpandocs"
description = "Project documentation with Markdown."
readme = "README.md"
license = "BSD-2-Clause"
authors = [
    {name = "Tom Christie", email = "tom@tomchristie.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "click >=7.0",
    "Jinja2 >=2.11.1",
    "markupsafe >=2.0.1",
    "pypandoc >=1.13",
    "beautifulsoup4 >=4.12",
    "html5lib >=1.1",
    "lxml >=4.9",
    "PyYAML >=5.1",
    "watchdog >=2.0",
    "ghp-import >=1.0",
    "pyyaml_env_tag >=0.1",
    "importlib-metadata >=4.4; python_version < '3.10'",
    "packaging >=20.5",
    "pathspec >=0.11.1",
    "platformdirs >=2.2.0",
    "colorama >=0.4; platform_system == 'Windows'",
]

[project.optional-dependencies]
i18n = [
    "babel >=2.9.0",
]
docs = [
    "markdown-callouts",
    "mdx-gh-links",
    "mkdocs-autorefs",
    "mkdocs-click",
    "mkdocs-literate-nav",
    "mkdocs-redirects",
    "mkdocstrings",
    "mkdocstrings-python",
    "pymdown-extensions",
]
test = [
    "properdocs-theme-mkdocs",
    "properdocs-theme-readthedocs",
    "coverage",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "types-PyYAML",
]

[project.urls]
Documentation = "https://rainppr.github.io/mkpandocs/"
Source = "https://github.com/RainPPR/mkpandocs"
Issues = "https://github.com/RainPPR/mkpandocs/issues"
History = "https://github.com/RainPPR/mkpandocs/releases"

[project.scripts]
mkpandocs = "properdocs.__main__:cli"

[project.entry-points."properdocs.plugins"]
search = "properdocs.contrib.search:SearchPlugin"

[tool.hatch.version]
path = "properdocs/__init__.py"

[tool.hatch.build]
artifacts = ["/properdocs/**/*.mo"]
[tool.hatch.build.targets.sdist]
include = ["/properdocs"]
[tool.hatch.build.targets.wheel]
exclude = ["/properdocs/tests"]

[tool.hatch.env]
requires = [
    "hatch-properdocs",
    "hatch-pip-compile >=1.7.0",
]

[tool.hatch.envs.default.scripts]
all = [
    "hatch run style:fix",
    "hatch run types:check",
    "hatch run test:test",
    "hatch run lint:check",
    "hatch run +type=default integration:test",
]

[tool.hatch.envs.test]
features = ["i18n"]
extra-dependencies = [
    "properdocs-theme-mkdocs",
    "properdocs-theme-readthedocs",
    "coverage",
]
[tool.hatch.envs.test.scripts]
test = 'python -m unittest discover -s properdocs -p "*tests.py"'
_coverage = [
    'coverage run --source=properdocs --omit "properdocs/tests/*" -m unittest discover -s properdocs -p "*tests.py"',
    "coverage xml",
    "coverage report --show-missing"
]
with-coverage = "test"
[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]
[tool.hatch.envs.test.overrides]
matrix.type.scripts = [
    { key = "with-coverage", value = "_coverage", if = ["default"] },
]

[tool.hatch.env.collectors.properdocs.integration]
path = "mkpandocs.yml"
[tool.hatch.envs.integration]
detached = false
template = "test"
[tool.hatch.envs.integration.scripts]
test = "python -m properdocs.tests.integration"
[[tool.hatch.envs.integration.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]
type = ["default", "no-babel"]
[tool.hatch.envs.integration.overrides]
matrix.type.features = [
    { value = "i18n", if = ["default"] },
]

[tool.hatch.envs.types]
dependencies = [
    "mypy",
    "babel",
    "types-pytz",
    "types-PyYAML",
    "types-setuptools",
    "typing-extensions",
]
[tool.hatch.envs.types.scripts]
check = "mypy {args} properdocs"

[tool.hatch.envs.style]
type = "pip-compile"
detached = true
dependencies = [
    "ruff",
]
[tool.hatch.envs.style.scripts]
check = "ruff check properdocs {args}"
format = "ruff format -q properdocs"
fix = [
    "check --fix --unsafe-fixes",
    "format",
]
[tool.hatch.envs.lint]
detached = true
dependencies = [
    "codespell==2.2.6",
]
[tool.hatch.envs.lint.scripts]
spelling = 'codespell properdocs docs *.* -S LC_MESSAGES -S "*.min.js" -S "lunr*.js" -S fontawesome-webfont.svg -S tinyseg.js -S "*.map"'
markdown = "npm exec --yes -- markdownlint-cli README.md CONTRIBUTING.md packages/README.md docs/ --ignore docs/CNAME"
js = "npm exec --yes -- jshint properdocs/"
check = ["markdown", "js", "spelling"]

[tool.hatch.env.collectors.properdocs.docs]
path = "mkpandocs.yml"
[tool.hatch.envs.docs]
type = "pip-compile"
detached = false

[tool.ruff]
line-length = 100
[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
preview = true
select = [
    "YTT", "ASYNC", "C4", "DTZ", "T10", "EXE", "FA", "ISC", "PIE", "T20", "RSE", "I", "E", "W", "F", "UP",
    "S201", "S202", "S303", "S304", "S305", "S306", "S506", "S602", "S604", "S605", "S612", "S704",
    "B002", "B003", "B004", "B005", "B007", "B008", "B009", "B010", "B011", "B012", "B013", "B014", "B015", "B016", "B017", "B018", "B020", "B021", "B022", "B023", "B025", "B026", "B029", "B030", "B031", "B032", "B033", "B034", "B035", "B039", "B043", "B901", "B905", "B909", "B911", "B912",
    "COM818",
    "LOG001", "LOG004", "LOG007", "LOG009", "LOG014", "LOG015",
    "G001", "G002", "G003", "G010", "G101", "G201", "G202",
    "PYI001", "PYI002", "PYI003", "PYI004", "PYI005", "PYI006", "PYI007", "PYI008", "PYI009", "PYI010", "PYI011", "PYI012", "PYI013", "PYI014", "PYI015", "PYI016", "PYI017", "PYI018", "PYI019", "PYI020", "PYI021", "PYI024", "PYI025", "PYI026", "PYI029", "PYI030", "PYI032", "PYI033", "PYI034", "PYI035", "PYI036", "PYI041", "PYI042", "PYI043", "PYI044", "PYI045", "PYI046", "PYI047", "PYI048", "PYI049", "PYI050", "PYI051", "PYI052", "PYI053", "PYI054", "PYI055", "PYI056", "PYI057", "PYI058", "PYI061", "PYI062", "PYI063", "PYI064", "PYI066",
    "Q004",
    "RET502", "RET503", "RET504",
    "SIM101", "SIM103", "SIM105", "SIM107", "SIM109", "SIM113", "SIM114", "SIM118", "SIM201", "SIM202", "SIM208", "SIM210", "SIM211", "SIM212", "SIM220", "SIM221", "SIM222", "SIM223", "SIM300", "SIM401", "SIM905", "SIM910", "SIM911",
    "TD004", "TD005", "TD006", "TD007",
    "TC001", "TC002", "TC003", "TC004", "TC005", "TC006", "TC007", "TC008", "TC010",
    "PTH124", "PTH201", "PTH210",
    "FLY002",
    "N803", "N804", "N805", "N806", "N807", "N815", "N816", "N999",
    "PERF101", "PERF102", "PERF402", "PERF403",
    "PGH003", "PGH004", "PGH005",
    "PLC0105", "PLC0131", "PLC0132", "PLC0205", "PLC0207", "PLC0208", "PLC0414", "PLC2401", "PLC2403", "PLC2701", "PLC2801", "PLC3002",
    "PLE0100", "PLE0101", "PLE0115", "PLE0116", "PLE0117", "PLE0118", "PLE0237", "PLE0241", "PLE0302", "PLE0303", "PLE0304", "PLE0305", "PLE0307", "PLE0308", "PLE0309", "PLE0604", "PLE0605", "PLE0643", "PLE0704", "PLE1132", "PLE1141", "PLE1142", "PLE1205", "PLE1206", "PLE1300", "PLE1307", "PLE1310", "PLE1507", "PLE1519", "PLE1520", "PLE1700", "PLE2502", "PLE2510", "PLE2512", "PLE2513", "PLE2514", "PLE2515", "PLE4703",
    "PLR0124", "PLR0133", "PLR0202", "PLR0203", "PLR0206", "PLR0402", "PLR1704", "PLR1708", "PLR1712", "PLR1716", "PLR1722", "PLR1733", "PLR1736", "PLR2044",
    "PLW0108", "PLW0120", "PLW0127", "PLW0128", "PLW0129", "PLW0131", "PLW0133", "PLW0177", "PLW0211", "PLW0244", "PLW0245", "PLW0406", "PLW0602", "PLW0603", "PLW0604", "PLW0642", "PLW0711", "PLW1501", "PLW1507", "PLW1508", "PLW1514", "PLW2101", "PLW3201",
    "FURB105", "FURB110", "FURB116", "FURB118", "FURB122", "FURB129", "FURB131", "FURB132", "FURB136", "FURB142", "FURB145", "FURB148", "FURB152", "FURB154", "FURB156", "FURB157", "FURB161", "FURB162", "FURB163", "FURB164", "FURB166", "FURB167", "FURB168", "FURB169", "FURB171", "FURB177", "FURB180", "FURB181", "FURB188", "FURB192",
    "RUF001", "RUF002", "RUF003", "RUF005", "RUF006", "RUF007", "RUF008", "RUF009", "RUF010", "RUF012", "RUF013", "RUF015", "RUF016", "RUF017", "RUF018", "RUF019", "RUF020", "RUF021", "RUF022", "RUF023", "RUF024", "RUF026", "RUF028", "RUF029", "RUF030", "RUF031", "RUF032", "RUF033", "RUF034", "RUF036", "RUF037", "RUF038", "RUF039", "RUF040", "RUF041", "RUF043", "RUF045", "RUF046", "RUF047", "RUF048", "RUF049", "RUF051", "RUF052", "RUF053", "RUF054", "RUF055", "RUF056", "RUF057", "RUF058", "RUF059", "RUF060", "RUF061", "RUF063", "RUF064", "RUF065", "RUF066", "RUF068", "RUF069", "RUF070", "RUF071", "RUF100", "RUF101", "RUF102", "RUF103", "RUF104", "RUF200",
    "TRY002", "TRY201", "TRY203", "TRY300", "TRY401",
]
ignore = ["E501", "E731"]
[tool.ruff.lint.per-file-ignores]
"properdocs/tests/**" = ["PLC2701", "PLR6301"]
[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true
[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "collections.abc"]

[tool.mypy]
warn_unreachable = true
allow_redefinition = true